zeit.find changes
=================

0.22.1 (unreleased)
-------------------

- Moved reusable styles to zeit.cms.


0.22.0 (2011-06-20)
-------------------

- Filter for raw-tag content added (#9096).

- Update our usage of product, since it's a whole object now, not just an id
  (for #9033).
  

0.21.0 (2010-08-16)
-------------------

- Reichweite in der Suche anzeigen (#7860).

- Vorschau-Link funktioniert wieder und wird nur angezeigt, wenn eine Vorschau
  vorhanden ist (#7858).

0.20.3 (2010-08-09)
-------------------

- Für Selenium-Tests wird nun ``gocept.selenium`` verwendet (#7549).


0.20.2 (2010-07-12)
-------------------

- Updated to new API (#7030)


0.20.1 (2010-04-12)
-------------------

- URLs für grpahical-preivew-url können nun auch vollaufgelöst sein
- Using versions from the ZTK.


0.20.0 (2010-03-10)
-------------------

- Ticker-Meldungen werden normalerweise ausgeblendet (#6914).

- Die Datumsfilter hängen jetzt von der aktuellen Uhrzeit und nicht mehr von
  der Zeit des letzten Server-Neustarts ab (#6922).


0.19.0 (2009-12-18)
-------------------

- Im Volltext ist die vollständige Solr-Syntax verfügbar
  <http://lucene.apache.org/java/2_4_0/queryparsersyntax.html> (#5822).
- 'Für diese Seite' entfernt (#6379).

0.18.0 (2009-10-19)
-------------------

- Die Typen-Suche ist jetzt in einer eigenen Box (#6351).

- Die letzte Suche wird nur noch gespeichert, wenn sich auch etwas geändert
  hat. Durch weniger Schreiboperationen wird die Gesamtgeschwindigket erhöht.

- Suche initial nach Datum sortiert (#6352).

0.17.0 (2009-10-12)
-------------------

- Style-Fixes

- Ausklappzustand der erweiterten Suche und der Filter wird gespeichert und
  wiederhergestellt (#6272).

0.16 (2009-10-06)
-----------------

- Die Suche zeigt jetzt Thumbnails von Bildern an.
- Die Einstellungen der letzten Suche werden gespeichert (#6017).
- Wenn nach ``*:*`` gesucht wird, wird *immer* nach Datum sortiert.

0.15 (2009-09-21)
-----------------
